tests/script_runtime_errors/non_obj_access2/error.txt
Error: 
    2 | event.snot[key]
      |            ^^^ Conflicting types, got integer but expected record